# testBlock

./: README
argosBlock/: State.lua  config_debugger.lua  fsm_testing.argos  test_leds.lua
argosBlock/loopFunction/: .testLoopFunction.cpp.swp  CMakeLists.txt  testLoopFunction.cpp  testLoopFunction.h  testbench.cpp  testbench.h
argosBlock/loopFunction/build_bc/: Makefile
argosBlock/loopFunction/build_surface/: cmake_install.cmake
history/backup_structure_detected_lua/: CubeDir.lua
history/backup_structure_detected_lua/math/: Matrix.lua
lua/: .Matrix.lua.swp  .calcBoxPos.lua.swp  .calcPos.lua.swp  .calcPos_fordata.lua.swp  .calcTagPos.lua.swp  .func.lua.swp  .solveSquare.lua.swp  .tracking.lua.swp  Matrix.lua  Quaternion.lua  calcBoxPos.lua  calcPos.lua  calcStructure.lua  calcTagPos.lua  config_debugger.lua  debugger.lua  func.lua  solve7add1.lua  solveSquare.lua  solveSquare2.lua  tracking.lua
lua/history/: calcPos_fordata.lua
lua/math/: .Matrix.lua.swp  Matrix.lua  Quaternion.lua  solveQuad.lua
lua/solveSqu/: .solveSquare.lua.swp  solve7add1.lua  solveSquare.lua  solveSquare2.lua  solveSquare3.lua
lua/solvepnp/: .solvepnp.cpp.swp  solvepnp.cpp
lua_strudetected_backup/solveSqu/: solveSquare.lua
openglBlock/: .function_opengl.cpp.swp  CMakeLists.txt  debug_opengl.cpp  function_opengl.cpp  function_opengl.h  main.cpp
openglBlock/surfacebuild/: CMakeCache.txt  Makefile  cmake_install.cmake  config_debugger.lua  luaBlock
testbench/: .testbench.cpp.swp  testbench.cpp  testbench.h
